Remove 1px gap bugg
This will remove the possibility for there sometimes being a 1px gap
between pointers, this is not a elegant solution and should be fixed
in another way

--- a/source/stylesheet/global.css
+++ b/source/stylesheet/global.css
@@ -23,7 +23,7 @@ section {
   place-content: center;
   position: relative;
 }
-body > header > * + *,
-section > * + * {
+body > header > * + *:not(svg),
+section > * + *:not(svg) {
   margin-top: 1em;
 }
