--- a/source/stylesheet/im-a.css
+++ b/source/stylesheet/im-a.css
@@ -8,7 +8,7 @@
 
 .im-a > svg {
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 0;
   transform: rotate(180deg);
   height: min(15vh, 5rem);
